Finished ASP.NET 5 Identity module.

--- a/src/TheWorld/Views/Shared/_Layout.cshtml
+++ b/src/TheWorld/Views/Shared/_Layout.cshtml
@@ -12,13 +12,23 @@
 
 <body>
     <div id="sidebar">
+        @if (User.Identity.IsAuthenticated)
+        {
         <img src="~/img/alf.jpg" alt="Alf headshot" class="headshot" />
-        <span id="username">Sam Hastings</span>
+        <span id="username">@User.Identity.Name</span>
+        }
+
         <ul class="nav">
             <li class="active"><a asp-controller="App" asp-action="Index">Home</a></li>
             <li><a asp-controller="App" asp-action="About">About</a></li>
             <li><a asp-controller="App" asp-action="Contact">Contact</a></li>
+            @if (User.Identity.IsAuthenticated)
+            {
+            <li><a asp-controller="App" asp-action="Trips">My Trips</a></li>
+            <li><a asp-controller="Auth" asp-action="Logout">Logout</a></li>
+            }
         </ul>
+
     </div>
 
     <div id="wrapper">
@@ -68,4 +78,5 @@
     @RenderSection("Scripts", false)
 
 </body>
+
 </html>
